<resources>
         <string name="app_name">K-LIT</string>
         <string name="action_settings">Settings</string>


        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="desc_mini">KLF will be a literary festival unlike any other; one that will raise the bar and set high standards for the long-term benefit of the literary field; one that will be looked upon as an institution in itself.
                            Set out in the following paragraphs is its key aims and aspirations.</string>
        <string name="home">Home</string>
        <string name="itinerary">Itinerary</string>
        <string name="speakers">Speakers</string>
        <string name="overview">Overview Of The Day</string>
        <string name="quiz">Quiz</string>
        <string name="picture">Picture Gallery</string>
        <string name="sponsors">Sponsors</string>
        <string name="facebook_app_id">106202256400127</string>

        <string name="home_vision">KLF will be a literary festival unlike any other; one that will raise the bar and set high standards for the long-term benefit of the literary field; one that will be looked upon as an institution in itself.

Set out in the following paragraphs is its key aims and aspirations. With its goals and roadmap for implementation clearly outlined,the festival will be gradually institutionalised so that it is not just a one-off event in a year.

A thought leader
Thought leaders lead their industry as specialists and subject-matter experts. They possess a distinctively original idea, a unique point of view or an unprecedented insight into their industry. While offering an inclusive platform for all stakeholders to facilitate a profound, in-depth, free, and frank dialogue and debate on issues that confront the world of Indian literature, KLF will serve as an independent and credible thought-leader that earns the respect of the literary community and to which the literary community defers to for guidance.

Celebrate Literature
KLF will celebrate literature by bringing together creative minds from around the country to offer insights on matters relevant to the world of Indian literature and our cultural life as a nation.

Caged birds must be set free. Untold stories must KLF will be a literary festival unlike any other; one that will raise the bar and set high standards for the long-term benefit of the literary field; one that will be looked upon as an institution in itself.

Set out in the following paragraphs is its key aims and aspirations. With its goals and roadmap for implementation clearly outlined,the festival will be gradually institutionalised so that it is not just a one-off event in a year.

A thought leader
Thought leaders lead their industry as specialists and subject-matter experts. They possess a distinctively original idea, a unique point of view or an unprecedented insight into their industry. While offering an inclusive platform for all stakeholders to facilitate a profound, in-depth, free, and frank dialogue and debate on issues that confront the world of Indian literature, KLF will serve as an independent and credible thought-leader that earns the respect of the literary community and to which the literary community defers to for guidance.

Celebrate Literature
KLF will celebrate literature by bringing together creative minds from around the country to offer insights on matters relevant to the world of Indian literature and our cultural life as a nation.

Caged birds must be set free. Untold stories must right foundation, we are contributing towardsdeveloping a bright and stable mind.

KLF will highlight this genre, the gaps therein, as well as the immense potential of this genre and bring in people who are passionate about presenting quality literature and fiction to children and young adults.

A capable stage for aspiring writers
India is a young nation with an even younger population, which means more innovative minds, more aspiring writers with untold stories, fresh views to old and new problems, an energetic aura, and more individuals with fire in their belliesto voice their opinion.

KLF will provide a platform to the young and aspiring writers tobe among the individualsthey admire, to raise questions, express opinions, share insights, and gain a deeper understanding of what is involved in being a successful writer.

KLF aspires to become a significant and crucial platform where aspiring writers can interact meaningfully with established and experienced writers.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anchal_bio">Aanchal Malhotra is a multimedia artist whose works explore the written word, photographic imagery and traditional printmaking. It reflects on issues like cultural diaspora and displacement, notions of withdrawing from or belonging to a certain place, the forgotten fragments of collective experiences, and family history and genealogy. She is currently working on a project entitled, \'Remnants of a Separation\' - a study of the material remains of the Partition of the Indian Subcontinent in 1947. Her primary research is based on the objects that individuals took with them when they left their homes on either side of the border - the belongings that became a part of their journey - whatever shape it was to take- and those which are now a part of their histories.</string>
    <string name="abha_bio">Abha Iyengar is an internationally published author, poet and British Council certified creative writing facilitator. Her work has appeared in The Four Quarters Magazine, Kritya, Muse India, The Asian Writer, Pure Slush, and others. Her story, The High Stool, was nominated for the Story South Million Writers Award. Her poem-film Parwaaz won a special jury prize at Patras, Greece and screened to acclaim at international film festivals. She won the Mariner Award 2010, and the Lavanya Sankaran fellowship 2009-10. She was a finalist in the FlashMob 2013 Flash Fiction contest. Her poems have appeared in the Anthology of Contemporary Indian Poets and her fiction in The Indo-Australian Anthology of Short Fiction. Her published works are Yearnings (poetry), Flash Bites (flash fiction), Shrayan and Many Fish to Fry (novels). A short story collection, The Gourd Seller and Other Stories is her latest work, published in 2015.</string>
    <string name="aditya_bio">Chef Aditya Bal grew up in a family which ran a hotel in idyllic Kashmir, watching his maternal grandmother rustle up delicious meals and bake most passionately. After an extremely successful modeling career spanning 8 years and a short stint in Bollywood, Aditya decided to head to Goa to pursue what he did best: cooking. A chance meeting with NDTV Good Times gave his culinary skills a new direction and today he is one of the most celebrated anchor-chefs on Chakh Le India, the most popular food show on the channel. He hosted a slew of very successful cookery shows for NDTV Goodtimes, and during this process has learned the nuances of proper regional and sub- regional Indian cuisine. He has worked alongside some of the well-known names in the FB industry both in India and South East Asia. He also enjoys writing cookbooks and published his first book last year. He continues to host new shows with TV channels and has just completed work on a show for the Epic channel, \'Lost Recipes\', which focuses on discovering and preserving lost recipes</string>
    <string name="advaita_bio">Advaita Kala is the celebrated literary brain behind Sujoy Ghosh\'s Vidya Balan starrer film Kahaani, author of best seller Almost Single and the script writer for Ranbir Kapoor - Priyanka Chopra starrer Anjaana - Anjaani. Hotelier by profession, Advaita quit her job as a hotel executive to pen the sequel to Almost Single. Advaita has lived in six cities before choosing to stay in Delhi for over two years. However, she still travels extensively.</string>
    <string name="alka_bio">Dr. Pande is currently a Consultant, Arts Advisor and Curator of the Visual Arts Gallery, India Habitat Centre, New Delhi. She has been passionately involved with the world of art for nearly three decades. Responsible for curating several significant and perceptive exhibitions in India and abroad, Dr. Pande has curated the latest international exhibition at the Pinacothèque de Paris titled The Kama-Sutra: Spirituality and Eroticism in Indian Art. In 2006, she was made - Chevalier de l’Ordre des Arts et des Lettres – Knight of the Order of Arts and Letters – an award bequeathed by the French government to recognise significant contributions in the fields of art and literature. In 2009, she received the Australian Asia Council Special Award. She has authored several well-acclaimed books, with a strong focus on Indian arts and ancient Indian erotic literature and aesthetics.</string>


</resources>
